--- a/views/contest_ranklist.ejs
+++ b/views/contest_ranklist.ejs
@@ -7,6 +7,7 @@
   color: #000;
 }
 </style>
+<div style="height:auto;width:auto;overflow:auto">
 <div class="padding">
 <h1 class="ui center aligned header" style="margin-bottom: 30px; "><%= contest.title %></h1>
         <table class="ui very basic center aligned table">
@@ -164,5 +165,6 @@
   </div>
 </div>
 <% } %>
+</div>
 </div>
 <% include footer %>
