--- a/views/sign_up_back.ejs
+++ b/views/sign_up_back.ejs
@@ -1,5 +1,5 @@
 <% this.title = '注册' %>
-<% include header %>
+<% include index_header %>
 <div class="padding">
   <h1>注册</h1>
   <div class="ui error message" id="error" data-am-alert hidden>
