--- a/views/contests.ejs
+++ b/views/contests.ejs
@@ -2,7 +2,7 @@
 <% include header %>
 <div class="padding">
     <% if (contests.length) { %>
-    <% if (user && user.is_admin) { %>
+    <% if (user && user.hasPrivilege('manage_problem')) { %>
     <form class="ui mini form">
       <div class="inline fields" style="margin-bottom: 25px; white-space: nowrap; ">
         <a href="<%= syzoj.utils.makeUrl(['contest', 0, 'edit']) %>" class="ui mini labeled icon right floated button" style="margin-left: auto; ">
@@ -50,7 +50,7 @@
         <i class="calendar icon" style="margin-bottom: 20px; "></i>
         暂无比赛
       </div>
-      <% if (user && user.is_admin) { %>
+      <% if (user && user.hasPrivilege('manage_problem')) { %>
       <a href="<%= syzoj.utils.makeUrl(['contest', 0, 'edit']) %>" class="ui primary labeled icon button">
         <i class="ui icon write"></i>
         添加第一场比赛
