--- a/views/forget.ejs
+++ b/views/forget.ejs
@@ -1,5 +1,5 @@
 <% this.title = '忘记密码' %>
-<% include header %>
+<% include index_header %>
 <div class="ui message" id="msgBox" hidden>
     <p id="msgContent"></p>
 </div>
